Add new filters and dummy data

--- a/Code Search/index.html
+++ b/Code Search/index.html
@@ -9,28 +9,40 @@
 </head>
 <body>
     <!-- Container for Handsontable -->
-    <div id="example"></div>
+    <div id="codeList"></div>
 
     <!-- Include Handsontable JS -->
     <script src="https://cdn.jsdelivr.net/npm/handsontable/dist/handsontable.full.min.js"></script>
     <script>
-        // Initialize Handsontable
-        var data = [
-            ["", "Ford", "Volvo", "Toyota", "Honda"],
-            ["2016", 10, 11, 12, 13],
-            ["2017", 20, 11, 14, 13],
-            ["2018", 30, 15, 12, 13]
-        ];
+        const container = document.querySelector('#codeList');
 
-        var container = document.getElementById('example');
-        var hot = new Handsontable(container, {
-            data: data,
-            rowHeaders: true,
-            colHeaders: true,
-            filters: true,
-            dropdownMenu: true,
-            licenseKey: 'non-commercial-and-evaluation',
-        });
+new Handsontable(container, {
+    data: [
+        ['1', 'Adidas White Sign', 'AB123'],
+        ['2', 'Nike Black Sign', 'CD456'],
+        ['3', 'Puma Red Sign', 'EF789'],
+        ['4', 'Reebok Blue Sign', 'GH012'],
+        ['5', 'Under Armour Green Sign', 'IJ345'],
+        ['6', 'New Balance Yellow Sign', 'KL678'],
+        ['7', 'Asics Orange Sign', 'MN901'],
+        ['8', 'Converse Purple Sign', 'OP234'],
+        ['9', 'Vans Pink Sign', 'QR567'],
+    ],
+    colHeaders: [
+        'ID',
+        'Description',
+        'Position',
+    ],
+      // enable filtering
+    filters: true,
+    // enable the column menu
+    dropdownMenu: true,
+    rowHeaders: true,
+    height: 'auto',
+    autoWrapRow: true,
+    autoWrapCol: true,
+    licenseKey: 'non-commercial-and-evaluation',
+    });
     </script>
 </body>
 </html>
